generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  password  String
  createdAt DateTime @default(now())
  role      Role
}

model rolls {
  id              Int           @id @default(autoincrement())
  name            String
  quantity        Float         // Changed from Int to Float to support decimal values (e.g., 33.300 kg)
  roll_unit_count Int?          // Number of physical roll pieces (e.g., 15 rolls)
  unit            String
  color           String
  vendor_id       Int?
  batches         batches[]
  vendor          vendors?      @relation(fields: [vendor_id], references: [id])
  sub_batches     sub_batches[]

  @@index([vendor_id])
}

model batches {
  id          Int           @id @default(autoincrement())
  roll_id     Int?
  name        String        // Fabric Name
  order_name  String?       // Order Name
  quantity    Float         // Changed from Int to Float to support decimal values (e.g., 33.300 kg)
  unit        String
  unit_count  Int?          // Number of fabric pieces
  color       String
  vendor_id   Int?
  roll        rolls?        @relation(fields: [roll_id], references: [id])
  vendor      vendors?      @relation(fields: [vendor_id], references: [id])
  sub_batches sub_batches[]

  @@index([roll_id])
  @@index([vendor_id])
}

model sub_batches {
  id               Int                      @id @default(autoincrement())
  roll_id          Int?
  batch_id         Int?
  estimated_pieces Int
  expected_items   Int
  start_date       DateTime
  due_date         DateTime
  department_id    Int?
  name             String
  status           SubBatchStatus           @default(DRAFT)
  completed_at     DateTime?
  dept_links       department_sub_batches[]
  altered          sub_batch_altered[]
  attachments      sub_batch_attachments[]
  rejected         sub_batch_rejected[]
  size_details     sub_batch_size_details[]
  workflows        sub_batch_workflows?
  batch            batches?                 @relation(fields: [batch_id], references: [id])
  department       departments?             @relation(fields: [department_id], references: [id])
  roll             rolls?                   @relation(fields: [roll_id], references: [id])
  worker_logs      worker_logs[]

  @@index([batch_id])
  @@index([roll_id])
  @@index([department_id])
  @@index([status])
  @@index([start_date])
}

model sub_batch_size_details {
  id           Int          @id @default(autoincrement())
  sub_batch_id Int?
  category     String
  pieces       Int
  sub_batch    sub_batches? @relation(fields: [sub_batch_id], references: [id])

  @@index([sub_batch_id])
}

model sub_batch_attachments {
  id              Int          @id @default(autoincrement())
  sub_batch_id    Int?
  attachment_name String
  quantity        Int
  sub_batch       sub_batches? @relation(fields: [sub_batch_id], references: [id])

  @@index([sub_batch_id])
}

model sub_batch_rejected {
  id                              Int                     @id @default(autoincrement())
  sub_batch_id                    Int?
  quantity                        Int
  sent_to_department_id           Int?
  reason                          String
  worker_id                       Int?
  worker_log_id                   Int?
  source_department_sub_batch_id  Int?
  created_department_sub_batch_id Int?
  sent_to_department              departments?            @relation("RejectedDept", fields: [sent_to_department_id], references: [id])
  sub_batch                       sub_batches?            @relation(fields: [sub_batch_id], references: [id])
  worker_log                      worker_logs?            @relation(fields: [worker_log_id], references: [id])
  source_entry                    department_sub_batches? @relation("RejectedSource", fields: [source_department_sub_batch_id], references: [id])
  created_entry                   department_sub_batches? @relation("RejectedCreated", fields: [created_department_sub_batch_id], references: [id])

  @@index([sub_batch_id])
  @@index([sent_to_department_id])
  @@index([worker_log_id])
  @@index([source_department_sub_batch_id])
}

model sub_batch_altered {
  id                              Int                     @id @default(autoincrement())
  sub_batch_id                    Int?
  quantity                        Int
  sent_to_department_id           Int?
  reason                          String
  worker_log_id                   Int?
  source_department_sub_batch_id  Int?
  created_department_sub_batch_id Int?
  sent_to_department              departments?            @relation("AlteredDept", fields: [sent_to_department_id], references: [id])
  sub_batch                       sub_batches?            @relation(fields: [sub_batch_id], references: [id])
  worker_log                      worker_logs?            @relation(fields: [worker_log_id], references: [id])
  source_entry                    department_sub_batches? @relation("AlteredSource", fields: [source_department_sub_batch_id], references: [id])
  created_entry                   department_sub_batches? @relation("AlteredCreated", fields: [created_department_sub_batch_id], references: [id])

  @@index([sub_batch_id])
  @@index([sent_to_department_id])
  @@index([worker_log_id])
  @@index([source_department_sub_batch_id])
}

model departments {
  id                        Int                        @id @default(autoincrement())
  name                      String
  remarks                   String?
  supervisor                Supervisor?
  dept_batches              department_sub_batches[]
  dept_workers              department_workers[]
  altered                   sub_batch_altered[]        @relation("AlteredDept")
  rejected                  sub_batch_rejected[]       @relation("RejectedDept")
  sub_batch_steps           sub_batch_workflow_steps[]
  sub_batches               sub_batches[]
  worker_logs               worker_logs[]
  workers                   workers[]
  workflow_steps            workflow_steps[]
  received_from_departments department_sub_batches[]   @relation("SentToDepartment")
}

model department_workers {
  id            Int          @id @default(autoincrement())
  department_id Int?
  worker_id     Int?
  assigned_date DateTime
  department    departments? @relation(fields: [department_id], references: [id])
  worker        workers?     @relation(fields: [worker_id], references: [id])

  @@index([department_id])
  @@index([worker_id])
}

model department_sub_batches {
  id                             Int             @id @default(autoincrement())
  department_id                  Int?
  sub_batch_id                   Int?
  assigned_worker_id             Int?
  parent_department_sub_batch_id Int?
  createdAt                      DateTime        @default(now())
  is_current                     Boolean         @default(false)
  stage                          DepartmentStage @default(NEW_ARRIVAL)
  updatedAt                      DateTime        @updatedAt
  quantity_remaining             Int?
  quantity_received              Int?
  quantity_assigned              Int?
  total_quantity                 Int?
  remarks                        String?
  sent_to_department_id          Int?
  sent_from_department           Int?
  alter_reason                   String?
  reject_reason                  String?

  // New fields for parent-child-dual workflow
  is_parent    Boolean   @default(false)
  is_dual      Boolean   @default(false)
  is_forwarded Boolean   @default(false)
  forwarded_at DateTime?

  // Child-specific fields
  child_received  Int?
  child_worked    Int? @default(0)
  child_altered   Int? @default(0)
  child_remaining Int?

  // Parent-specific calculated fields
  parent_worked  Int? @default(0)
  parent_altered Int? @default(0)

  history            department_sub_batch_history[]
  worker_logs        worker_logs[]
  assigned_worker    workers?                       @relation(fields: [assigned_worker_id], references: [id])
  department         departments?                   @relation(fields: [department_id], references: [id])
  sub_batch          sub_batches?                   @relation(fields: [sub_batch_id], references: [id])
  sent_to_department departments?                   @relation("SentToDepartment", fields: [sent_to_department_id], references: [id])
  parent_card        department_sub_batches?        @relation("CardSplits", fields: [parent_department_sub_batch_id], references: [id], onDelete: SetNull)
  child_cards        department_sub_batches[]       @relation("CardSplits")
  rejected_source    sub_batch_rejected[]           @relation("RejectedSource")
  rejected_created   sub_batch_rejected[]           @relation("RejectedCreated")
  altered_source     sub_batch_altered[]            @relation("AlteredSource")
  altered_created    sub_batch_altered[]            @relation("AlteredCreated")

  // Critical indexes for performance
  @@index([department_id])
  @@index([sub_batch_id])
  @@index([assigned_worker_id])
  @@index([parent_department_sub_batch_id])
  @@index([is_current])
  @@index([stage])
  @@index([department_id, is_current]) // Composite: supervisor dashboard queries
  @@index([department_id, sub_batch_id, is_parent, is_current]) // Composite: card lookups
  @@index([createdAt])
}

model clients {
  id      Int     @id @default(autoincrement())
  name    String
  vat_pan String
  address String
  phone   String
  comment String?
}

model workers {
  id                     Int                      @id @default(autoincrement())
  name                   String
  pan                    String
  address                String
  department_id          Int?
  wage_rate              Float
  wage_type              String
  department_assignments department_sub_batches[]
  dept_workers           department_workers[]
  worker_logs            worker_logs[]
  department             departments?             @relation(fields: [department_id], references: [id])

  @@index([department_id])
}

model worker_logs {
  id                      Int                     @id @default(autoincrement())
  worker_id               Int
  sub_batch_id            Int
  particulars             String?
  quantity_received       Int?
  quantity_worked         Int?
  size_category           String?
  unit_price              Float?
  work_date               DateTime?
  worker_name             String?
  activity_type           String?
  is_billable             Boolean                 @default(true)
  department_id           Int?
  department_sub_batch_id Int?
  altered_entry           sub_batch_altered[]
  rejected_entry          sub_batch_rejected[]
  departments             departments?            @relation(fields: [department_id], references: [id])
  sub_batch               sub_batches             @relation(fields: [sub_batch_id], references: [id])
  worker                  workers                 @relation(fields: [worker_id], references: [id])
  department_sub_batch    department_sub_batches? @relation(fields: [department_sub_batch_id], references: [id])

  // Critical indexes for worker log queries
  @@index([worker_id])
  @@index([sub_batch_id])
  @@index([department_id])
  @@index([department_sub_batch_id])
  @@index([sub_batch_id, department_id]) // Composite: getSubBatchHistory queries
  @@index([work_date])
  @@index([activity_type])
}

model vendors {
  id      Int       @id @default(autoincrement())
  name    String
  vat_pan String
  address String
  phone   String
  comment String?
  batches batches[]
  rolls   rolls[]
}

model categories {
  id            Int    @id @default(autoincrement())
  category_name String @unique
}

model workflow_templates {
  id          Int              @id @default(autoincrement())
  name        String
  description String?
  createdAt   DateTime         @default(now())
  steps       workflow_steps[]
}

model workflow_steps {
  id                   Int                 @id @default(autoincrement())
  workflow_template_id Int?
  step_index           Int
  department_id        Int
  department           departments         @relation(fields: [department_id], references: [id])
  workflow_template    workflow_templates? @relation(fields: [workflow_template_id], references: [id])
}

model sub_batch_workflows {
  id                 Int                        @id @default(autoincrement())
  sub_batch_id       Int                        @unique
  current_step_index Int                        @default(0)
  createdAt          DateTime                   @default(now())
  steps              sub_batch_workflow_steps[]
  sub_batch          sub_batches                @relation(fields: [sub_batch_id], references: [id])
}

model sub_batch_workflow_steps {
  id                    Int                  @id @default(autoincrement())
  sub_batch_workflow_id Int?
  step_index            Int
  department_id         Int
  department            departments          @relation(fields: [department_id], references: [id])
  sub_batch_workflow    sub_batch_workflows? @relation(fields: [sub_batch_workflow_id], references: [id])
}

model department_sub_batch_history {
  id                      Int                     @id @default(autoincrement())
  department_sub_batch_id Int?
  sub_batch_id            Int?
  from_stage              DepartmentStage?
  to_stage                DepartmentStage
  from_department_id      Int?
  to_department_id        Int?
  action_by_user_id       Int?
  reason                  String?
  createdAt               DateTime                @default(now())
  department_sub_batch    department_sub_batches? @relation(fields: [department_sub_batch_id], references: [id])

  @@index([department_sub_batch_id])
  @@index([sub_batch_id])
  @@index([createdAt])
}

model Supervisor {
  id           Int          @id @default(autoincrement())
  name         String
  email        String       @unique
  password     String
  role         Role         @default(SUPERVISOR)
  departmentId Int?         @unique
  createdAt    DateTime     @default(now())
  department   departments? @relation(fields: [departmentId], references: [id])
}

// Inventory Categories - User-defined categories for organizing inventory items
model inventory_category {
  id        Int         @id @default(autoincrement())
  name      String      @unique
  createdAt DateTime    @default(now())
  inventory inventory[]
}

model inventory {
  id                     Int                     @id @default(autoincrement())
  name                   String
  unit                   String
  date                   DateTime                @default(now())
  quantity               Float
  price                  Float
  vendor                 String
  phone                  String
  remarks                String?
  category_id            Int?                    // Optional category reference
  min_quantity           Float?                  @default(0) // Low-stock threshold
  category               inventory_category?     @relation(fields: [category_id], references: [id])
  inventory_subtractions inventory_subtraction[]
  inventory_additions    inventory_addition[]

  @@index([category_id])
}

model inventory_subtraction {
  id           Int       @id @default(autoincrement())
  inventory_id Int
  date         DateTime  @default(now())
  quantity     Float
  remarks      String?
  reason       String?   // Reason code: PRODUCTION_USE, DAMAGED, SAMPLE, RETURNED, EXPIRED, OTHER
  inventory    inventory @relation(fields: [inventory_id], references: [id])

  @@index([inventory_id])
  @@index([date])
}

model inventory_addition {
  id           Int       @id @default(autoincrement())
  inventory_id Int
  date         DateTime  @default(now())
  quantity     Float
  remarks      String?
  inventory    inventory @relation(fields: [inventory_id], references: [id])

  @@index([inventory_id])
  @@index([date])
}

enum DepartmentStage {
  NEW_ARRIVAL
  IN_PROGRESS
  COMPLETED
}

enum Role {
  ADMIN
  SUPERVISOR
  SUPER_SUPERVISOR
}

enum SubBatchStatus {
  DRAFT
  IN_PRODUCTION
  COMPLETED
  CANCELLED
}
